--- a/stylesheets/episode.css
+++ b/stylesheets/episode.css
@@ -9,72 +9,40 @@
 }
 
 #title-func h2 {
-    position: relative;
-    overflow: hidden;
-}
-
-#title-func h2,
-#channel-name {
-    display: block;
+    float: left;
     height: 27px;
     line-height: 27px;
 }
 
+#channel-name {
+    float: left;
+    margin-right: 5px;
+}
+
 #title-func h2 .title-crumb {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 322px;
-    height: 27px;
+    float: left;
 }
 
-.zh #title-func h2 .title-crumb {
-    width: 236px;
+#title-func ul {
+    float: right;
+    overflow: hidden;
 }
 
-#title-func h2 .curate {
-    display: inline-block;
-    margin-left: 10px;
-    padding: 0 0 0 3px;
-    background: url(../images/bg_btn_left.png) no-repeat 0 0;
-    text-decoration: none;
+#title-func ul li {
+    float: left;
+    margin-right: 15px;
 }
 
-#title-func h2 .curate span {
-    display: block;
+#title-func ul li.last {
+    margin: 0;
 }
 
-#title-func h2 .curate .btn-right {
-    padding: 0 3px 0 0;
-    background: url(../images/bg_btn_right.png) no-repeat right 0;
+#title-func ul li p {
+    width: 162px;
 }
 
-#title-func h2 .curate .btn-middle {
-    height: 27px;
-    padding: 3px 10px 0 10px;
-    border: none;
-    background: url(../images/bg_btn_middle.png) repeat 0 0;
-    color: #555;
-    font-family: Arial, Helvetica;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 22px;
-    text-decoration: none;
-    text-align: center;
-}
-
-#title-func h2 .curate:hover {
-    background: url(../images/bg_btn_left_press.png) no-repeat 0 0;
-}
-
-#title-func h2 .curate:hover .btn-right {
-    background: url(../images/bg_btn_right_press.png) no-repeat right 0;
-}
-
-#title-func h2 .curate:hover .btn-middle {
-    background: url(../images/bg_btn_middle_press.png) repeat 0 0;
-    color: #777;
+#title-func ul li p span a {
+    padding: 4px 5px 0 !important;
 }
 
 /**
@@ -88,7 +56,6 @@
     position: relative;
     width: 781px;
 	margin-top: 4px;
-    padding-bottom: 30px;
     text-align: center;
 }
 
@@ -116,6 +83,7 @@
 #ep-time-list h3,
 #ep-no               h3 {
     margin-bottom: 10px;
+    color: #777;
     font-weight: bold;
     font-size: 25px;
     text-align: center;
