--- a/stylesheets/ep-curation.css
+++ b/stylesheets/ep-curation.css
@@ -2130,6 +2130,7 @@ padding-right: 8px;
     margin: 0;
     background: url(../images/bg_tip_middle.png) repeat-x bottom;
     color: #555;
+    font-weight: normal;
     font-size: 13px;
     line-height: 30px;
 }
